<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AR Project</string>
    <string name="menu_main_launch_url">Custom URL Launcher</string>
    <string name="menu_main_show_sdk_info">SDK Build Information</string>

    <!-- Permission handling -->
    <string name="permissions_denied">The Wikitude SDK needs the following permissions to enable an AR experience:</string>
    <string name="permission_rationale_text">The Wikitude SDK needs the following permissions to enable an AR experience:</string>
    <string name="permission_rationale_title">Wikitude Permissions</string>

    <!-- SDK build information -->
    <string name="build_information_title">Build information</string>
    <string name="build_information_config">Build configuration: </string>
    <string name="build_information_date">Build date: </string>
    <string name="build_information_number">Build number: </string>
    <string name="build_information_version">Build version: </string>

    <!-- SamplePoiDetailActivity -->
    <string name="poi_name">Name</string>
    <string name="poi_description">Description</string>
    <string name="poi_id">ID</string>

    <!-- Url launcher storage -->
    <string name="url_list_row_delete">deletes stored url</string>
    <string name="url_list_row_edit">edits list row</string>
    <string name="url_launcher_title">Custom Url Launcher</string>

    <!-- Url launcher settings -->
    <string name="url_launcher_settings_url_hint">http://</string>
    <string name="url_launcher_settings_url_default">http://</string>
    <string name="url_launcher_settings_url">URL</string>
    <string name="url_launcher_settings_name">Name</string>
    <string name="url_launcher_settings_geo">Geo</string>
    <string name="url_launcher_settings_image_tracking">Image Tracking</string>
    <string name="url_launcher_settings_instant_tracking">Instant Tracking</string>
    <string name="url_launcher_settings_object_tracking">Object Tracking</string>
    <string name="url_launcher_settings_camera_focus_mode">Camera Focus Mode</string>
    <string name="url_launcher_settings_camera_position">Camera Position</string>
    <string name="url_launcher_settings_camera_resolution">Camera Resolution</string>
    <string name="url_launcher_settings_camera2_enabled">Camera 2 Enabled</string>
    <string name="url_launcher_settings_ok">OK</string>


    <!-- login strings -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Username</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="title_welcome_main">WelcomeActivity</string>



    <!-- add user place strings -->
    <string name="hint_place_name">Place Name</string>
    <string name="hint_address">Place Address</string>
    <string name="hint_web_address">Web Address</string>
    <string name="hint_phone">Phone Number</string>
    <string name="hint_place_type">Place Type (Shop , Hotel etc.)</string>
    <string name="btn_add_place">Add Place</string>
    <string name="btn_find_place">Find User Place</string>
    <string name="place_name">Place Name</string>
    <string name="title_add_user_location">AddUserLocationActivity</string>

    <!-- MYSQL access strings -->
    <string name="MYSQLHostname">.mysql.database.azure.com</string>
    <string name="MYSQLPort">3306</string>
    <string name="MYSQLDBName">fyp-dbserver</string>
    <string name="MYSQLUsername">des_root@fyp-dbserver</string>
    <string name="MYSQLPassword">Desmond1</string>

    ,-- Added for new Welcome Activity Page -->
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="last_update_time_label">Last location update time</string>

    <string name="start_updates">Start updates</string>
    <string name="stop_updates">Stop updates</string>

    <string name="location_settings_inadequate_warning">The location settings on the device are not
        adequate to run this sample. Fix in Settings.</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>


    <string-array name="url_launcher_settings_camera_positions">
        <item>Back</item>
        <item>Front</item>
    </string-array>

    <string-array name="url_launcher_settings_focus_mode">
        <item>Continuously</item>
        <item>Once</item>
        <item>Manual</item>
    </string-array>

    <string-array name="url_launcher_settings_camera_resolution">
        <item>640x480</item>
        <item>1280x720</item>
        <item>1920x1080</item>
        <item>AUTO</item>
    </string-array>
    <string name="title_activity_add_user_location">AddUserLocationActivity</string>
    <string name="title_activity_nearby_places">NearbyPlacesActivity</string>


    <!-- google places types -->

</resources>